# askem-beaker-build-test

./: .gitignore  Dockerfile  Dockerfile.full  Dockerfile.light  LICENSE.txt  Makefile  README.md  docker-compose-full.yml  docker-compose.yaml  env.example  hatch_build.py  pyproject.toml
.circleci/: config.yml
.github/workflows/: publish-cloud-builder.yaml  publish.yaml
docker/: docker-bake.hcl  docker-compose-remote.yaml
docker/hmi/: docker-compose-base.yml  docker-compose-common.yml  docker-compose-keycloak.yml
docker/hmi/realm/: Terarium-realm.json  Terarium-users-0.json
docs/: Dockerfile  _config.yaml  _config_local.yaml  _contexts_context.md  contexts.md  contexts_climate_data_utility.md  contexts_dataset.md  contexts_decapodes.md  contexts_mira.md  contexts_mira_config_edit.md  contexts_mira_model.md  contexts_mira_model_edit.md  contexts_oceananigans.md  contexts_pypackage.md  index.md
src/askem_beaker/: utils.py
src/askem_beaker/contexts/chirho/: agent.py  context.py
src/askem_beaker/contexts/chirho/lib/: utils.py
src/askem_beaker/contexts/climate_data_utility/: agent.py  context.py  default_payload.json
src/askem_beaker/contexts/climate_data_utility/procedures/python3/: cartwright_res_detect.py  hmi_create_dataset.py  hmi_dataset_download.py  hmi_dataset_put.py
src/askem_beaker/contexts/dataset/: agent.py  context.py
src/askem_beaker/contexts/dataset/procedures/julia/: df_save_as.jl
src/askem_beaker/contexts/dataset/procedures/python3/: load_df.py
src/askem_beaker/contexts/dataset/procedures/rlang/: df_save_as.r
src/askem_beaker/contexts/mira/: agent.py  context.json  context.py  default_payload.json  new_base_agent.py
src/askem_beaker/contexts/mira/lib/: utils.py
src/askem_beaker/contexts/mira/procedures/python3/: compare_mira_models.py  get_jupyter_variables.py  load_mira_model.py  mira_setup.py
src/askem_beaker/contexts/mira_config_edit/: agent.py  context.py  default_payload.json
src/askem_beaker/contexts/mira_config_edit/procedures/python3/: get_initials.py  get_params.py  load_model.py  model_preview.py  setup.py  update_params.py
src/askem_beaker/contexts/mira_model/: agent.py  context.py
src/askem_beaker/contexts/mira_model/procedures/python3/: amr_to_templates.py  load_model.py  model_preview.py  model_to_json.py  setup.py  stratify.py
src/askem_beaker/contexts/mira_model_edit/: agent.py  context.py
src/askem_beaker/contexts/mira_model_edit/procedures/python3/: add_controlled_conversion_template.py  add_controlled_degradation_template.py  add_controlled_production_template.py  add_natural_conversion_template.py  add_natural_degradation_template.py  add_natural_production_template.py  add_observable.py  add_parameter.py  load_model.py  model_preview.py  remove_observable.py  remove_template.py  replace_ratelaw.py  replace_state_name.py  replace_template_name.py  setup.py  stratify.py  update_parameter.py
src/askem_beaker/contexts/pyciemss/: agent.py  context.py  default_payload.json
src/askem_beaker/contexts/pyciemss/procedures/python3/: df_save_as.py  metadata.json  optimize.py  save_results.py  setup.py  simulate.py
src/askem_beaker/contexts/pypackage/: context.py
src/askem_beaker/contexts_disabled/decapodes/: agent.py  context.py
src/askem_beaker/contexts_disabled/decapodes/procedures/julia/: construct_expr.jl  expr_to_info.jl  generate_preview.jl  load_model.jl  model_to_equation.jl  reset.jl  save_sol.jl  setup.jl
src/askem_beaker/contexts_disabled/mimi/: agent.py  context.py
src/askem_beaker/contexts_disabled/mimi/lib/: dynamic_example_selector.py
src/askem_beaker/contexts_disabled/mimi/procedures/julia/: info.jl  model_info.jl  search_packages.jl
src/askem_beaker/contexts_disabled/oceananigans/: agent.py  context.py
